--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -16,7 +16,8 @@ spec:
         - name: searchingwithelasticsearch-api
           image: searchingwithelasticsearch-api:latest
           ports:
-            - containerPort: 80
+            - hostPort: 7059
+              containerPort: 80
 ---
 
 apiVersion: apps/v1
